@@ -13,6 +13,10 @@
     </section>
   </section>
   <section>
+    <title>Updating the GUI from an EvolutionObserver</title>
+    <para>TODO</para>
+  </section>
+  <section>
     <title>The Evolution Monitor</title>
     <para>TODO</para>
   </section>
